@@ -1,3 +1,8 @@
+Sun Nov  6 11:48:55 2016  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* test/net/smtp/test_smtp.rb (test_tls_connect, test_tls_connect):
+	  use Socket.tcp_server_sockets in case localhost is resolved to ::1.
+
 Sun Nov  6 11:49:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/irb.rb (IRB::Irb#run): split from IRB.start.
